refactor : User, UserDetailsImpl, UserDetailsServiceImpl 구조 개선 및 Role 처리 정비